Fix spacing.

--- a/nodechat/resources/style.css
+++ b/nodechat/resources/style.css
@@ -40,7 +40,7 @@ ul span {
  position: absolute;
  top: 0;
  right: 0;
- bottom: 2.5em;
+ bottom: 2em;
  left: auto;
  width: 9em;
 }
